--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,180 +1,174 @@
 :root {
-    --white-color: #fff;
-    --black-color: #000;
-    --text-color: #333;
-    --primary-color: #EE4D2D;
+  --white-color: #fff;
+  --black-color: #000;
+  --text-color: #333;
+  --primary-color: #ee4d2d;
 
-    --header-height: 133px;
-    --navbar-height: 34px;
-    --header-search-height: calc(var(--header-height) - var(--navbar-height));
+  --header-height: 133px;
+  --navbar-height: 34px;
+  --header-search-height: calc(var(--header-height) - var(--navbar-height));
+  --header-sort-bar-height: 46px;
 }
 
 * {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 html {
-    /* 10px */
-    font-size: 62.5%;
-    /* 1.6rem = 16px */
-    line-height: 1.6rem;
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
+  /* 10px */
+  font-size: 62.5%;
+  /* 1.6rem = 16px */
+  line-height: 1.6rem;
+  font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
 }
 
 /* Responsive */
-.grid {
-    width: 1200px;
-    max-width: 100%;
-    margin: 0 auto;
-}
 
 .grid__full-width {
-    width: 100%;
+  width: 100%;
 }
 
 .grid__row {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -5px;
-    margin-right: -5px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -5px;
+  margin-right: -5px;
 }
 
 .app_content {
-    padding-top: 32px;
+  padding-top: 32px;
 }
 
 .grid__column-2 {
-    padding-left: 5px;
-    padding-right: 5px;
-    width: calc((2/12) * 100%);
+  padding-left: 5px;
+  padding-right: 5px;
+  width: calc((2 / 12) * 100%);
 }
 
 .grid__column-2-4 {
-    padding-left: 5px;
-    padding-right: 5px;
-    width: 20%;
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 20%;
 }
 
 .grid__column-10 {
-    padding-left: 5px;
-    padding-right: 5px;
-    width: calc((10/12) * 100%);
+  padding-left: 5px;
+  padding-right: 5px;
+  width: calc((10 / 12) * 100%);
 }
 
 /* Animations */
 
 @keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes growth {
-    from {
-        transform: scale(var(--growth-from));
-    }
-    to {
-        transform: scale(var(--growth-to));
-    }
+  from {
+    transform: scale(var(--growth-from));
+  }
+  to {
+    transform: scale(var(--growth-to));
+  }
 }
 
 /* Modal */
 .modal {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    display: flex;
-    animation: fadeIn linear .2s;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  animation: fadeIn linear 0.2s;
 }
 
 .modal__overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal__body {
-    --growth-from: 0.5;
-    --growth-to: 1;
-    background-color: var(--white-color);
-    margin: auto;
-    z-index: 1;
-    border-radius: 5px;
-    animation: growth linear .2s;
+  --growth-from: 0.5;
+  --growth-to: 1;
+  background-color: var(--white-color);
+  margin: auto;
+  z-index: 1;
+  border-radius: 5px;
+  animation: growth linear 0.2s;
 }
 
 .btn--primary {
-    background-color: #EE4D2D;
-    color: var(--white-color);
+  background-color: #ee4d2d;
+  color: var(--white-color);
 }
 
 /* Buttons */
 .btn {
-    font-size: 1.4rem;
-    padding: 12px 32px;
-    border: none;
-    font-weight: 300;
-    text-transform: uppercase;
-    text-decoration: none;
-    outline: none;
-    display: inline-flex;
-    align-items: center;
+  font-size: 1.4rem;
+  padding: 12px 32px;
+  border: none;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-decoration: none;
+  outline: none;
+  display: inline-flex;
+  align-items: center;
 }
 
 .btn:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .btn.btn--size-s {
-    height: 40px;
-    font-size: 12px;
-    padding: 8px 32px;
+  height: 40px;
+  font-size: 12px;
+  padding: 8px 32px;
 }
 
 /* Pagination */
 
 .pagination {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
 }
 
 .pagination-item {
-    margin: 0 12px;
+  margin: 0 12px;
 }
 
 .pagination-item--active .pagination-link {
-    background-color: var(--primary-color);
-    color: var(--white-color);
-    border-radius: 2px;
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  border-radius: 2px;
 }
 
 .pagination-item--active .pagination-link:hover {
-    background-color: #e77a64;
+  background-color: #e77a64;
 }
 
 .pagination-link {
-    text-decoration: none;
-    font-size: 1.8rem;
-    font-weight: 300;
-    color: #939393;
-    min-width: 40px;
-    height: 30px;
-    display: block;
-    text-align: center;
-    /* Căn giữa text line-height = height */
-    line-height: 30px;
+  text-decoration: none;
+  font-size: 1.8rem;
+  font-weight: 300;
+  color: #939393;
+  min-width: 40px;
+  height: 30px;
+  display: block;
+  text-align: center;
+  /* Căn giữa text line-height = height */
+  line-height: 30px;
 }
 
 .pagination-icon {
-
 }
-
